[gd_scene load_steps=10 format=3 uid="uid://sbftb7rp0y8s"]

[ext_resource type="Script" path="res://UI/skill_select.gd" id="1_q44un"]
[ext_resource type="Texture2D" uid="uid://br61tx2eecdyb" path="res://Assets/Keys/light1.png" id="2_8yd26"]
[ext_resource type="Texture2D" uid="uid://c4cu0th6hox57" path="res://Assets/Keys/light2.png" id="3_vso81"]
[ext_resource type="Texture2D" uid="uid://tjhawnhijxdr" path="res://Assets/Keys/heavy1.png" id="4_f657w"]
[ext_resource type="Texture2D" uid="uid://c4lj3ucnv5hmb" path="res://Assets/Keys/heavy2.png" id="5_jrarx"]
[ext_resource type="Texture2D" uid="uid://ckgsmxdfy74b6" path="res://Assets/Keys/charge1.png" id="6_ln0bd"]
[ext_resource type="Texture2D" uid="uid://cdm0qsshfayat" path="res://Assets/Keys/charge2.png" id="7_v5mgx"]
[ext_resource type="SpriteFrames" uid="uid://dfd61w7lijj21" path="res://UI/KeySelectSpriteFrames.tres" id="8_luws0"]
[ext_resource type="SpriteFrames" uid="uid://b8ypm7qiustnt" path="res://UI/KeyCursorSpriteFrames.tres" id="9_0e34a"]

[node name="SkillSelect" type="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(200, 0)
script = ExtResource("1_q44un")

[node name="HBoxContainerLight" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="P1Light1" type="TextureButton" parent="HBoxContainerLight"]
layout_mode = 2
texture_normal = ExtResource("2_8yd26")

[node name="P1Light2" type="TextureButton" parent="HBoxContainerLight"]
layout_mode = 2
texture_normal = ExtResource("3_vso81")

[node name="HBoxContainerHeavy" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="P1Heavy1" type="TextureButton" parent="HBoxContainerHeavy"]
layout_mode = 2
texture_normal = ExtResource("4_f657w")

[node name="P1Heavy2" type="TextureButton" parent="HBoxContainerHeavy"]
layout_mode = 2
texture_normal = ExtResource("5_jrarx")

[node name="HBoxContainerCharge" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="P1Charge1" type="TextureButton" parent="HBoxContainerCharge"]
layout_mode = 2
texture_normal = ExtResource("6_ln0bd")

[node name="P1Charge2" type="TextureButton" parent="HBoxContainerCharge"]
layout_mode = 2
texture_normal = ExtResource("7_v5mgx")

[node name="Selectors" type="Node" parent="."]

[node name="SelectP1Light" type="AnimatedSprite2D" parent="Selectors"]
texture_filter = 1
sprite_frames = ExtResource("8_luws0")
frame_progress = 0.363047

[node name="SelectP1Heavy" type="AnimatedSprite2D" parent="Selectors"]
texture_filter = 1
sprite_frames = ExtResource("8_luws0")
frame_progress = 0.480017

[node name="SelectP1Charge" type="AnimatedSprite2D" parent="Selectors"]
texture_filter = 1
sprite_frames = ExtResource("8_luws0")
frame_progress = 0.480017

[node name="CursorP1" type="AnimatedSprite2D" parent="Selectors"]
texture_filter = 1
sprite_frames = ExtResource("9_0e34a")
